fix: dark mode y componentizacion completa

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -440,3 +440,12 @@ body,
     transform: scale(1);
   }
 }
+/* Texto general */
+body {
+  color: #111827;
+}
+
+/* Dark mode */
+.dark body {
+  color: #e5e7eb;
+}
